# Frescolino

./: .gitignore  .gitmodules  README.md  generate_readme.py  todo.txt
doc/: Makefile
doc/source/: autodoc_file_template.rst  conf.py  doc_template.rst  examples.rst  index.rst  index_template.rst  main_template.rst  style_guide.rst  style_guide.txt  todo.rst  tutorial.rst  useful_links.rst
doc/source/custom_setup/: __init__.py  conf_custom.py
doc_src/: Makefile  how_to_clone_frescolino.txt  how_to_create_new_python_package.txt
doc_src/how_to_submodule/: clean.sh  prepare.sh  submodules.sh
fsc/_tpl_py/: __init__.py
fsc/_tpl_py/example/: example.py
fsc/tpl_py/doc_support/: description.rst  examples.rst
fsc/tpl_py/examples/: example.py
helpers/: create_cpp_library.py  create_module.py  create_python_module.py  create_python_package.py
helpers/cpp_library_template/: .gitignore  CMakeLists.txt
helpers/cpp_library_template/config/: cmake_uninstall.cmake.in
helpers/cpp_library_template/doc/: CMakeLists.txt  Doxyfile.in
helpers/cpp_library_template/test/: demo_test.cpp  unittests.cpp
helpers/python_base_package/: MANIFEST.in  setup.py
helpers/python_base_package/doc/: description.txt
helpers/python_base_package/fsc/: __init__.py
helpers/python_doc_template/: Makefile
helpers/python_doc_template/source/: conf.py  documentation.rst  index.rst
helpers/python_fsc_base/: setup.py
helpers/python_fsc_base/doc/: README
helpers/python_fsc_base/fsc/: __init__.py
helpers/python_module_template/: setup.py
helpers/python_package_template/: .gitignore  MANIFEST.in  setup.py
(+12 files in other folders)
